chore: atualiza .gitignore para ignorar arquivos desnecessários

--- a/.gitignore
+++ b/.gitignore
@@ -1,49 +1,13 @@
-
-# Logs
-logs
-*.log
-npm-debug.log*
-yarn-debug.log*
-yarn-error.log*
-pnpm-debug.log*
-lerna-debug.log*
-
-node_modules
-dist
-dist-ssr
-*.local
-
-# Editor directories and files
-.vscode/*
-!.vscode/extensions.json
-.idea
-.DS_Store
-*.suo
-*.ntvs*
-*.njsproj
-*.sln
-*.sw?
-
-# Maven
-target/
-
-# IDE
-.idea/
+# Node / React
+node_modules/
+dist/
 .vscode/
-*.iml
-*.classpath
-*.project
-*.settings/
+.env
 
-# Logs
+# Java / Maven
+target/
 *.log
 
-# Config local
-.env
-application-local.properties
-application-local.yml
-
-# Sistema
+# Sistema operacional
 .DS_Store
 Thumbs.db
-
